drama-address-book-main/devops/initialize/resources/gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: nara-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
