drama-address-book-main/devops/initialize/resources/external-maria.yml
apiVersion: v1
kind: Service
metadata:
  name: external-maria
spec:
  clusterIP: None
  ports:
    - protocol: TCP
      port: 3306

---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-maria
subsets:
  - addresses:
      - ip: 10.146.15.198
    ports:
      - port: 3306

---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-maria
spec:
  hosts:
    - external-maria
  addresses:
    - 10.146.15.198/32
  ports:
    - name: tcp
      number: 3306
      protocol: tcp
  location: MESH_EXTERNAL
