drama-address-book-main/devops/initialize/resources/external-mongo.yml
apiVersion: v1
kind: Service
metadata:
  name: external-mongo
spec:
  clusterIP: None
  ports:
    - protocol: TCP
      port: 27017

---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-mongo
subsets:
  - addresses:
      - ip: 10.146.0.7
    ports:
      - port: 27017

---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-mongo
spec:
  hosts:
    - external-mongo
  addresses:
    - 10.146.0.7/32
  ports:
    - name: tcp
      number: 27017
      protocol: tcp
  location: MESH_EXTERNAL
