drama-address-book-main/devops/initialize/resources/external-redis.yml
apiVersion: v1
kind: Service
metadata:
  name: external-redis
spec:
  clusterIP: None
  ports:
    - protocol: TCP
      port: 6379

---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-redis
subsets:
  - addresses:
      - ip: 10.146.0.23
    ports:
      - port: 6379

---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-redis
spec:
  hosts:
    - external-redis
  addresses:
    - 10.146.0.23/32
  ports:
    - name: tcp
      number: 6379
      protocol: tcp
  location: MESH_EXTERNAL
